--- a/GenericWebAPICore/appsettings.json
+++ b/GenericWebAPICore/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "ConectionString": "data source=DESKTOP-DMRP32O\\RNRDATALEX; initial catalog=GenericAPI_DB; integrated security=True;"
+  },
   "conString": "data source=DESKTOP-DMRP32O\\RNRDATALEX; initial catalog=GenericAPI_DB; integrated security=True;",
   "Logging": {
     "IncludeScopes": false,
